--- a/src/renderer/styles/chrome.css
+++ b/src/renderer/styles/chrome.css
@@ -77,6 +77,12 @@
 #toolbar button:not(:disabled):hover { background-color: var(--bg-hover); }
 #toolbar button:disabled { color: var(--fg-secondary); cursor: not-allowed; opacity: 0.4; }
 
+#toolbar button i,
+.window-controls button i {
+    position: relative;
+    top: 2px;
+}
+
 #toolbar #add-tab-btn {
     background-color: var(--accent-color);
     color: #fff;
@@ -86,8 +92,8 @@
 }
 
 #address-bar-container { flex-grow: 1; position: relative; height: 100%; display: flex; align-items: center; min-width: 150px; max-width: 350px; transition: max-width 200ms ease-in-out;}
-#address-bar { width: 100%; height: 28px; border-radius: 0; border: 1px solid var(--border-color); background-color: var(--bg-secondary); color: var(--fg-primary); padding: 0 12px; font-size: 14px; outline: none; -webkit-user-select: text; user-select: text; }
-#address-bar:focus { border-color: var(--accent-color); box-shadow: 0 0 0 1px var(--accent-color); }
+#address-bar { width: 100%; height: 28px; border-radius: 0; border: none; background-color: var(--bg-tertiary); color: var(--fg-primary); padding: 0 12px; font-size: 14px; outline: none; -webkit-user-select: text; user-select: text; }
+#address-bar:focus { box-shadow: 0 0 0 1px var(--accent-color); }
 
 /* --- Dynamic Address Bar --- */
 #titlebar.address-bar-expanded #toolbar-wrapper {
